PR/50322: Timo Buhrmester: tail -F <file> misbehaves with stdin closed Compare fp with stdin not fileno(fp) with STDIN_FILENO, because if tail is called with 0 closed, then we are not going to be setting event filters for the file because we'll erroneously think it is stdin.